--- a/index.html
+++ b/index.html
@@ -70,14 +70,25 @@
 </div>
 
 <div class="gallery" id="gallery">
-    <h1>YAY!!! ❤️</h1>
-    <p>I love you :)</p>
+    <h1>YAY!!!</h1>
+    <p>I love you so so much</p>
 
-    <!-- PUT YOUR PHOTOS HERE -->
-    <img src="https://via.placeholder.com/300">
-    <img src="https://via.placeholder.com/300">
-    <img src="https://via.placeholder.com/300">
+    <div class="photo-card">
+        <p>I can’t wait to see you soon</p>
+        <img src="us.jpg">
+    </div>
+
+    <div class="photo-card">
+        <p>Me knowing you're going to be my valentine</p>
+        <img src="bear.jpg">
+    </div>
+
+    <div class="photo-card">
+        <p>Me nibbling on you next weekend</p>
+        <img src="piper.jpg">
+    </div>
 </div>
+
 
 <script>
 const noBtn = document.getElementById('no');
