--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
     <div class="photo-card">
         <p>Me knowing you're going to be my valentine</p>
-        <img src="bear.jpg">
+        <img src="bear.jpeg">
     </div>
 
     <div class="photo-card">
         <p>Me nibbling on you next weekend</p>
-        <img src="piper.jpg">
+        <img src="piper.jpeg">
     </div>
 </div>
 
