--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ img:hover{
 
 <!-- QUESTION -->
 <div class="container" id="question">
-    <h1>Will you be my Valentine?</h1>
+    <h1>My baby baby - Will you be my Valentine?</h1>
     <button id="yes">Yes</button>
     <button id="no">No</button>
 </div>
