--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@ h1{
     font-size:3rem;
     color:white;
 }
+.hero-photo{
+    height:340px;
+    width:auto;
+    border-radius:24px;
+    margin:25px 0;
+    box-shadow:0 15px 35px rgba(0,0,0,.35);
+    transition:.3s;
+}
 
+.hero-photo:hover{
+    transform:scale(1.05);
+}
 /* BUTTONS */
 
 button{
@@ -116,6 +127,7 @@ img:hover{
 <!-- QUESTION -->
 <div class="container" id="question">
     <h1>My baby baby - Will you be my Valentine?</h1>
+    <img src="josh.jpg" class="hero-photo">
     <button id="yes">Yes</button>
     <button id="no">No</button>
 </div>
